# glitter

./: CMakeLists.txt  README.md  game.cpp
assets/shaders/: quad.frag  quad.vert
audio/: CMakeLists.txt
audio/src/: Audio.h  SoLoudEngine.cpp  SoLoudEngine.h
audio/test/: AudioTests.cpp  CMakeLists.txt
camera/: CMakeLists.txt
camera/src/: Camera.h
camera/test/: ScreenTests.cpp
core/: CMakeLists.txt
core/src/: Engine.cpp  Engine.h  File.h  GLFWInput.cpp  GLFWInput.h  Game.cpp  Game.h  GlewContext.cpp  GlewContext.h  Input.cpp  Input.h  ModelDatabase.cpp  ModelDatabase.h  ResourceManager.cpp  ResourceManager.h  Window.cpp  Window.h
graphics/: CMakeLists.txt
graphics/src/: Line.cpp  Line.h  Model.h  Shader.cpp  Shader.h  Square.cpp  Square.h  Texture.cpp  Texture.h  Window.cpp  Window.h
graphics/test/: AllTests.cpp  CMakeLists.txt  WindowTests.cpp
math/: CMakeLists.txt
math/src/: AABB.cpp  AABB.h  Vec3d.cpp  Vec3d.h  Vector2d.cpp  Vector2d.h  Vector3d.h
math/test/: AABBTests.cpp  CMakeLists.txt  Vector2DTests.cpp  Vector3dTests.cpp
player/: CMakeLists.txt
player/src/: Ally.cpp  Ally.h  Bullet.cpp  Bullet.h  ControllablePlayer.cpp  ControllablePlayer.h  Enemy.cpp  Enemy.h  First.cpp  First.h  Idiot.cpp  Idiot.h  Input.h  Player.h  PowerUp.h  Weapon.h
player/test/: CMakeLists.txt  ControllablePlayerTests.cpp  IdiotTests.cpp  MockInput.cpp  MockInput.h  PlayerTests.cpp
screen/: CMakeLists.txt
screen/src/: Camera.cpp  Screen.cpp  Screen.h
screen/test/: CMakeLists.txt  ScreenTests.cpp
sound/: CMakeLists.txt  Sound.cpp  Sound.h
text/: CMakeLists.txt  Text.cpp  Text.h
utils/: CMakeLists.txt
utils/src/: FPSCounter.h  File.cpp  File.h  ResourceManager.cpp  ResourceManager.h  glDebug.h
world/: CMakeLists.txt
world/src/: Map.cpp  Map.h
